--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:square": "node test-square-api.js --mock",
+    "test:square:live": "node test-square-api.js --live"
   },
   "dependencies": {
     "@nangohq/frontend": "^0.61.2",
     "@supabase/supabase-js": "^2.39.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "square": "^42.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
