--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -314,3 +314,13 @@ verify_jwt = false
 verify_jwt = false
 [functions.square-service]
 verify_jwt = false
+[functions.booking]
+enabled = true
+verify_jwt = true
+import_map = "./functions/booking/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/booking/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/booking/*.html" ]
